nginx-ingress-class.yaml
# nginx-ingress-class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"  # Set as default, optional
spec:
  controller: k8s.io/ingress-nginx
