nginx1-deployment.yaml
# nginx1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx1-deployment
  namespace: ingress-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx1
  template:
    metadata:
      labels:
        app: nginx1
    spec:
      containers:
      - name: nginx1
        image: nginx:1.21.6
        volumeMounts:
        - name: nginx1-html
          mountPath: /usr/share/nginx/html
        ports:
        - containerPort: 80
      volumes:
      - name: nginx1-html
        configMap:
          name: nginx1-html-config
