nginx1-service.yaml
# nginx1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx1-service
  namespace: ingress-nginx
spec:
  selector:
    app: nginx1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
