nginx2-service.yaml
# nginx2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx2-service
  namespace: ingress-nginx
spec:
  selector:
    app: nginx2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
