nginx-ingress.yaml
# nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  # Reference the correct IngressClass here
  rules:
  - host: example.com
    http:
      paths:
      - path: /nginx1
        pathType: Prefix
        backend:
          service:
            name: nginx1-service
            port:
              number: 80
      - path: /nginx2
        pathType: Prefix
        backend:
          service:
            name: nginx2-service
            port:
              number: 80
